Fix unknown overflow.

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,5 @@
 .app {
   position: relative;
   min-height: 100%;
+  overflow: hidden;
 }
