--- a/src/assets/styles/GoogleMap.scss
+++ b/src/assets/styles/GoogleMap.scss
@@ -1,3 +1,4 @@
 #map-styles {
- margin: 0 auto;
+  overflow: hidden;
+  margin: 0 auto;
 }
